--- a/pandas_dataframes.ipynb
+++ b/pandas_dataframes.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,10 +152,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name         1\n",
+       "Team         1\n",
+       "Number       1\n",
+       "Position     1\n",
+       "Age          1\n",
+       "Height       1\n",
+       "Weight       1\n",
+       "College     85\n",
+       "Salary      12\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nba.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 458 entries, 0 to 457\n",
+      "Data columns (total 9 columns):\n",
+      "Name        457 non-null object\n",
+      "Team        457 non-null object\n",
+      "Number      457 non-null float64\n",
+      "Position    457 non-null object\n",
+      "Age         457 non-null float64\n",
+      "Height      457 non-null object\n",
+      "Weight      457 non-null float64\n",
+      "College     373 non-null object\n",
+      "Salary      446 non-null float64\n",
+      "dtypes: float64(4), object(5)\n",
+      "memory usage: 32.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "nba.info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -385,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +503,7 @@
        "1/3/16        14           20    933"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +524,7 @@
        "6"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +549,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +694,7 @@
        "2  Boston University        NaN  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,32 +706,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    Avery Bradley\n",
+       "1      Jae Crowder\n",
+       "2     John Holland\n",
+       "Name: Name, dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Extracting a single column from a DataFrame returns a Series\n",
     "# This only works if column names have no spaces or symbols\n",
     "# In a Series, this returns the corresponding value for the key/index\n",
-    "name = nba.Name.head(3)"
+    "name = nba.Name.head(3)\n",
+    "name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     0.0\n",
+       "1    99.0\n",
+       "2    30.0\n",
+       "Name: Number, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "number = nba.Number.head(3)"
+    "number = nba.Number.head(3)\n",
+    "number"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    7730337.0\n",
+       "1    6796117.0\n",
+       "2          NaN\n",
+       "Name: Salary, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "salary = nba.Salary.head(3)"
+    "salary = nba.Salary.head(3)\n",
+    "salary"
    ]
   },
   {
@@ -2267,6 +2364,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
