Commit practice updates from today

--- a/linear_regression_advertising.ipynb
+++ b/linear_regression_advertising.ipynb
@@ -1371,6 +1371,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluate Models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
