--- a/TSA_COURSE_NOTEBOOKS/04-Time-Series-with-Pandas/02-Time-Shifting.ipynb
+++ b/TSA_COURSE_NOTEBOOKS/04-Time-Series-with-Pandas/02-Time-Shifting.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {
+    "toc": true
+   },
+   "source": [
+    "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#.shift()-forward\" data-toc-modified-id=\".shift()-forward-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>.shift() forward</a></span></li><li><span><a href=\"#.shift()-backwards\" data-toc-modified-id=\".shift()-backwards-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>.shift() backwards</a></span></li><li><span><a href=\"#Shifting-based-on-Time-Series-Frequency-Code\" data-toc-modified-id=\"Shifting-based-on-Time-Series-Frequency-Code-3\"><span class=\"toc-item-num\">3&nbsp;&nbsp;</span>Shifting based on Time Series Frequency Code</a></span></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "___\n",
@@ -24,9 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd"
@@ -35,9 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('../Data/starbucks.csv',index_col='Date',parse_dates=True)"
@@ -684,7 +690,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": true,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": true,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
