--- a/sara_peek.ipynb
+++ b/sara_peek.ipynb
@@ -7,7 +7,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Acquire-Data\" data-toc-modified-id=\"Acquire-Data-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Acquire Data</a></span><ul class=\"toc-item\"><li><span><a href=\"#DataFrame-Metadata\" data-toc-modified-id=\"DataFrame-Metadata-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>DataFrame Metadata</a></span></li><li><span><a href=\"#Explore-Unique-Values-by-Column\" data-toc-modified-id=\"Explore-Unique-Values-by-Column-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Explore Unique Values by Column</a></span></li><li><span><a href=\"#Explore-Comment-Column\" data-toc-modified-id=\"Explore-Comment-Column-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Explore Comment Column</a></span></li><li><span><a href=\"#Explore-Station-Id-Column\" data-toc-modified-id=\"Explore-Station-Id-Column-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Explore Station Id Column</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Acquire-Data\" data-toc-modified-id=\"Acquire-Data-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Acquire Data</a></span><ul class=\"toc-item\"><li><span><a href=\"#DataFrame-Metadata\" data-toc-modified-id=\"DataFrame-Metadata-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>DataFrame Metadata</a></span><ul class=\"toc-item\"><li><span><a href=\"#rainfall_summ-df\" data-toc-modified-id=\"rainfall_summ-df-1.1.1\"><span class=\"toc-item-num\">1.1.1&nbsp;&nbsp;</span>rainfall_summ df</a></span></li></ul></li><li><span><a href=\"#Explore-Unique-Values-by-Column\" data-toc-modified-id=\"Explore-Unique-Values-by-Column-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>Explore Unique Values by Column</a></span></li><li><span><a href=\"#Explore-Comment-Column\" data-toc-modified-id=\"Explore-Comment-Column-1.3\"><span class=\"toc-item-num\">1.3&nbsp;&nbsp;</span>Explore Comment Column</a></span></li><li><span><a href=\"#Explore-Station-Id-Column\" data-toc-modified-id=\"Explore-Station-Id-Column-1.4\"><span class=\"toc-item-num\">1.4&nbsp;&nbsp;</span>Explore Station Id Column</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -453,15 +453,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17290, 5)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "rainfall"
+    "rainfall.shape"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 17290 entries, 0 to 17289\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   name         17290 non-null  object \n",
+      " 1   latitude     17290 non-null  float64\n",
+      " 2   longitude    17290 non-null  float64\n",
+      " 3   datetime     17290 non-null  object \n",
+      " 4   24HourTotal  17290 non-null  float64\n",
+      "dtypes: float64(3), object(2)\n",
+      "memory usage: 675.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "rainfall.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### rainfall_summ df\n",
+    "\n",
+    "- `location_name` possible aggregation level with `daily_rainfall_total_inches`.\n",
+    "\n",
+    "- Possible time series analysis or aggregation by day or time range."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>location_name</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>date</th>\n",
+       "      <th>daily_rainfall_total_inches</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Blanco Road Dam</td>\n",
+       "      <td>29.6248</td>\n",
+       "      <td>-98.52135</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Blanco Road Dam</td>\n",
+       "      <td>29.6248</td>\n",
+       "      <td>-98.52135</td>\n",
+       "      <td>2018-01-02</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Blanco Road Dam</td>\n",
+       "      <td>29.6248</td>\n",
+       "      <td>-98.52135</td>\n",
+       "      <td>2018-01-03</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Blanco Road Dam</td>\n",
+       "      <td>29.6248</td>\n",
+       "      <td>-98.52135</td>\n",
+       "      <td>2018-01-04</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Blanco Road Dam</td>\n",
+       "      <td>29.6248</td>\n",
+       "      <td>-98.52135</td>\n",
+       "      <td>2018-01-05</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     location_name  latitude  longitude        date  \\\n",
+       "0  Blanco Road Dam   29.6248  -98.52135  2018-01-01   \n",
+       "1  Blanco Road Dam   29.6248  -98.52135  2018-01-02   \n",
+       "2  Blanco Road Dam   29.6248  -98.52135  2018-01-03   \n",
+       "3  Blanco Road Dam   29.6248  -98.52135  2018-01-04   \n",
+       "4  Blanco Road Dam   29.6248  -98.52135  2018-01-05   \n",
+       "\n",
+       "   daily_rainfall_total_inches  \n",
+       "0                         0.01  \n",
+       "1                         0.00  \n",
+       "2                         0.00  \n",
+       "3                         0.00  \n",
+       "4                         0.00  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rainfall_summ.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13395, 5)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rainfall_summ.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 13395 entries, 0 to 13394\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column                       Non-Null Count  Dtype  \n",
+      "---  ------                       --------------  -----  \n",
+      " 0   location_name                13395 non-null  object \n",
+      " 1   latitude                     13395 non-null  float64\n",
+      " 2   longitude                    13395 non-null  float64\n",
+      " 3   date                         13395 non-null  object \n",
+      " 4   daily_rainfall_total_inches  13395 non-null  float64\n",
+      "dtypes: float64(3), object(2)\n",
+      "memory usage: 523.4+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "rainfall_summ.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Explore Unique Values by Column"
