Commit start of via_time data

--- a/pandas_series_lesson.ipynb
+++ b/pandas_series_lesson.ipynb
@@ -411,7 +411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**What if I want just the rows that return True for being in my_colors list?**\n",
+    "**What if I want just the rows that return True for being in `my_colors` list?**\n",
     "\n",
     "I can pass my `bools` Series as a selector for specific rows in my `c_series`, only rows that return True. This is Boolean Indexing and is a common way to filter data in a Series as well as in a DataFrame.\n",
     "\n",
